<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".local.AddBookActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:contentInsetStart="0dp"
            android:background="@color/purple_200"
            android:id="@+id/toolbar"
            app:contentInsetEnd="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/add_books"
                android:textColor="@color/white"
                android:id="@+id/tvToolbar"
                android:textSize="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:maxLength="30"
                android:autofillHints="@string/name"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:layout_marginTop="30dp"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="@string/mobile" />

            <Spinner
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                android:id="@+id/sprBooks"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/et_mobile"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/button_style"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/et_name"
                app:layout_constraintStart_toStartOf="@+id/et_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/sprBooks"
                app:layout_constraintVertical_bias="0.243" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>